refactor: ahora todo el proyecto es sobre el microservicio semestre

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>co.empresa</groupId>
-    <artifactId>producto-service</artifactId>
+    <artifactId>semestre-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>producto-service</name>
-    <description>producto-service</description>
+    <name>semestre-service</name>
+    <description>semestre-service</description>
     <url/>
     <licenses>
         <license/>
