--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuracion general de la aplicacion
 
 ## Configuracion del nombre de la aplicacion
-spring.application.name=producto-service
+spring.application.name=semestre-service
 
 ## Ajustamos la version de la aplicacion y la version de la API
 app.version=0.14.0
@@ -15,7 +15,7 @@ management.server.port=8081
 management.endpoints.web.exposure.include=*
 
 # Configuracion de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/curso_springboot
+spring.datasource.url=jdbc:postgresql://localhost:5432/semestre
 spring.datasource.username=devdb
 spring.datasource.password=a1b2c3d4
 spring.datasource.driver-class-name=org.postgresql.Driver
