--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,70 +7,42 @@ spring.application.name=semestre-service
 app.version=0.14.0
 app.api.version=v1
 
+# Configuracion de la zona horaria y el idioma
+spring.jackson.time-zone=America/Bogota
+spring.jackson.locale=es_CO
+
 ## Ajustamos el puerto del servidor de aplicacion
 server.port=8080
 
-## Ajustamos la configuracion de Actuator
-management.server.port=8081
-management.endpoints.web.exposure.include=*
-
 # Configuracion de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/semestre
-spring.datasource.username=devdb
-spring.datasource.password=a1b2c3d4
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${JPA_DDL:create-drop}
 
-# Configuracion de JPA
-spring.jpa.show-sql=true
-## Se define la estrategia de creacion de tablas
-### create-drop: Crea las tablas cada vez que se inicia la aplicacion y las elimina al finalizar
-### create: Crea las tablas cada vez que se inicia la aplicacion
-### update: Actualiza las tablas si hay cambios en las entidades
-### validate: Valida la estructura de las tablas
-### none: No realiza ninguna accion
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Habilita transacciones de jpa mientras se renderiza la vista. (true, false)
+spring.jpa.open-in-view = true
 
-# Habilitamos las referencias circulares
-## Si la clase A tiene un atributo de tipo B y la clase B tiene un atributo de tipo A, Spring detecta una referencia
-## circular y lanza un error al intentar instanciar ambos.
-## Con spring.main.allow-circular-references=true, Spring usa proxies dinamicos para retrasar la inyeccion y evitar el
-## error.
-## Cuando hay una dependencia circular, Spring en lugar de crear A y B al mismo tiempo, crea un proxy de A, lo inyecta
+## Configuracion de la aplicacion
+# Habilita o deshabilita las referencias circulares en la inyeccion de dependencias.
+# Cuando es 'true', se permiten referencias circulares; cuando es 'false', se lanzara una excepcion en caso de referencias circulares.
 spring.main.allow-circular-references=true
 
+#
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-# Configuracion de Hikari
-## Configuracion del pool de conexiones
-spring.datasource.hikari.maximum-pool-size=50
+## Configuracion de la visualizacion de las consultas SQL en la consola (no para produccion)
+# Habilita la visualizacion de las consultas SQL en la consola. (true, false)
+spring.jpa.show-sql=false
 
-## Configuracion del tiempo de espera de la conexion
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
 
-## Configuracion de la cantidad minima de conexiones con poca carga
-spring.datasource.hikari.minimum-idle=10
-
-## Configuracion del tiempo de espera para mantener la conexion viva
-spring.datasource.hikari.keepalive-time=300000
-spring.datasource.hikari.validation-timeout=5000
-spring.datasource.hikari.connection-test-query=SELECT 1
-
-# Configuracion de la depuracion de la aplicacion
-
-## Podemos tener diferentes niveles de depuracion tales como:
-## DEBUG, INFO, WARN, ERROR, FATAL, OFF
-
-## Habilitamos la depuracion de la aplicacion
-logging.level.org.springframework=ERROR
-
-## Habilitamos la depuracion de las peticiones HTTP
-logging.level.web=INFO
-
-## Habilitamos la depuracion de las peticiones SQL
+## Configuracion del registro de depuracion (debug) de Spring y Hibernate (No para produccion)
+# Habilita el registro de Spring en nivel DEBUG: muestra las peticiones HTTP en la consola. (DEBUG, INFO, WARN, ERROR, FATAL, OFF)
+logging.level.web=DEBUG
+# Habilita el registro SQL de Hibernate en nivel DEBUG: muestra las consultas SQL en la consola. (trace, debug, info, warn, error, fatal, off)
 logging.level.org.hibernate.SQL=DEBUG
+# Habilita el registro de los parametros SQL de Hibernate en nivel debug: muestra los valores de los parametros en las consultas SQL. (trace, debug, info, warn, error, fatal, off)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=debug
 
-logging.level.root=ERROR
-logging.level.com.zaxxer.hikari=ERROR
-logging.level.org.hibernate=ERROR
+# Operaciones
+management.endpoints.web.exposure.include=health
